Adjusted Full load and formatting code

--- a/notebooks/Reformat-Equities.ipynb
+++ b/notebooks/Reformat-Equities.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3a4fab86-7b18-418b-a929-c29a3d711d4e",
    "metadata": {},
    "outputs": [],
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b32f00ff-f478-487e-817e-4b861dd22778",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the master-data object to get the \n",
-    "mstr_df = pd.read_csv(path + '/master/company_info.csv.gz', compression='gzip')\n",
+    "mstr_df = pd.read_csv(path + 'master/company_info1.tsv.gz', compression='gzip', sep = '\\t')\n",
     "\n",
     "# Fill missing sector\n",
     "mstr_df.fillna('No-Sector', inplace = True)\n",
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "729de18b-00fc-453f-b93d-9c8b36ae75c6",
+   "execution_count": 6,
+   "id": "238bad93-d20e-4085-a2c1-057d07693aee",
    "metadata": {},
    "outputs": [
     {
@@ -82,52 +82,57 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ticker</th>\n",
+       "      <th>name</th>\n",
+       "      <th>ipoyear</th>\n",
+       "      <th>sector</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>last_update</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AABA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AACG</td>\n",
+       "      <th>9</th>\n",
+       "      <td>AAIC.B</td>\n",
+       "      <td>Arlington Asset Investment Corp 7.00%</td>\n",
+       "      <td>No-Sector</td>\n",
+       "      <td>no-sector</td>\n",
+       "      <td>No-Sector</td>\n",
+       "      <td>No-Sector</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  ticker\n",
-       "0      A\n",
-       "1     AA\n",
-       "2   AABA\n",
-       "3    AAC\n",
-       "4   AACG"
+       "   ticker                                    name    ipoyear     sector  \\\n",
+       "9  AAIC.B  Arlington Asset Investment Corp 7.00%   No-Sector  no-sector   \n",
+       "\n",
+       "    industry last_update  \n",
+       "9  No-Sector   No-Sector  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get all of the unique tickers in the dataset\n",
-    "df_ticker = pd.read_sql('SELECT DISTINCT ticker from dly_stock_hist', conn)\n",
-    "\n",
-    "df_ticker.head()"
+    "mstr_df[mstr_df['ticker'] == 'AAIC.B']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "be250725-7ded-466f-b676-ce90ba33dbf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(path + 'equities/no-sector.tsv.gz',\n",
+    "                            compression = 'gzip',\n",
+    "                            sep = '\\t',\n",
+    "                            index_col = False,\n",
+    "                            encoding = 'utf-8',\n",
+    "                            lineterminator = '\\n')"
    ]
   },
   {
